--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "devDependencies": {
     "tsup": "^7.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^0.34.6"
   },
   "name": "@statelyai/inspect",
   "version": "0.0.1",
@@ -13,9 +14,10 @@
   "dependencies": {
     "isomorphic-ws": "^5.0.0",
     "ws": "^8.13.0",
-    "xstate": "^5.0.0-beta.21"
+    "xstate": "5.0.0-beta.38"
   },
   "scripts": {
-    "build": "tsup src/index.ts --dts"
+    "build": "tsup src/index.ts --dts",
+    "test": "vitest"
   }
 }
