Add browser logic

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "build": "tsup src/index.ts --dts",
+    "watch": "tsup src/index.ts --dts --watch",
     "test": "vitest"
   }
 }
