--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "tsup": "^7.2.0",
     "typescript": "^5.1.6",
     "vitest": "^0.34.6"
