--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
+    "@types/jsdom": "^21.1.6",
+    "jsdom": "^23.0.0",
     "tsup": "^7.2.0",
     "typescript": "^5.1.6",
     "vitest": "^0.34.6"
