--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "fast-safe-stringify": "^2.1.1",
     "isomorphic-ws": "^5.0.0",
-    "xstate": "5.0.0-beta.53"
+    "xstate": "5.0.0"
   },
   "scripts": {
     "build": "tsup src/index.ts --dts",
