--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "build": "tsup src/index.ts --dts",
     "watch": "tsup src/index.ts --dts --watch",
-    "test": "vitest"
+    "test": "vitest",
+    "prepublishOnly": "tsup src/index.ts --dts"
   }
 }
