--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "jsdom": "^23.0.0",
     "tsup": "^7.2.0",
     "typescript": "^5.1.6",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "xstate": "^5.5.1"
   },
   "name": "@statelyai/inspect",
   "version": "0.2.0",
@@ -16,8 +17,10 @@
   "license": "MIT",
   "dependencies": {
     "fast-safe-stringify": "^2.1.1",
-    "isomorphic-ws": "^5.0.0",
-    "xstate": "5.1.0"
+    "isomorphic-ws": "^5.0.0"
+  },
+  "peerDependencies": {
+    "xstate": "^5.5.1"
   },
   "scripts": {
     "build": "tsup src/index.ts --dts",
