--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.26.2",
     "@types/jsdom": "^21.1.6",
+    "@types/uuid": "^9.0.8",
     "jsdom": "^23.0.0",
     "tsup": "^7.2.0",
     "typescript": "^5.1.6",
@@ -18,7 +19,10 @@
   "license": "MIT",
   "dependencies": {
     "fast-safe-stringify": "^2.1.1",
-    "isomorphic-ws": "^5.0.0"
+    "isomorphic-ws": "^5.0.0",
+    "partysocket": "^0.0.25",
+    "superjson": "^1",
+    "uuid": "^9.0.1"
   },
   "peerDependencies": {
     "xstate": "^5.5.1"
@@ -30,7 +34,8 @@
     "prepublishOnly": "tsup src/index.ts --dts",
     "changeset": "changeset",
     "release": "changeset publish",
-    "version": "changeset version"
+    "version": "changeset version",
+    "dev": "yarn build && ./scripts/dev.sh"
   },
   "publishConfig": {
     "access": "public"
