--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "author": "David Khourshid <davidkpiano@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "fast-safe-stringify": "^2.1.1",
-    "isomorphic-ws": "^5.0.0"
+    "isomorphic-ws": "^5.0.0",
+    "safe-stable-stringify": "^2.4.3"
   },
   "peerDependencies": {
     "xstate": "^5.5.1"
