--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.26.2",
+    "@changesets/cli": "^2.27.1",
     "@types/jsdom": "^21.1.6",
     "@types/uuid": "^9.0.8",
-    "jsdom": "^23.0.0",
-    "tsup": "^7.2.0",
-    "typescript": "^5.1.6",
-    "vitest": "^0.34.6",
-    "xstate": "^5.5.1"
+    "jsdom": "^23.2.0",
+    "tsup": "^8.0.2",
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.1",
+    "xstate": "^5.9.1"
   },
   "name": "@statelyai/inspect",
   "version": "0.2.5",
@@ -21,9 +21,9 @@
     "fast-safe-stringify": "^2.1.1",
     "isomorphic-ws": "^5.0.0",
     "partysocket": "^0.0.25",
-    "superjson": "^1",
-    "uuid": "^9.0.1",
-    "safe-stable-stringify": "^2.4.3"
+    "safe-stable-stringify": "^2.4.3",
+    "superjson": "^1.13.3",
+    "uuid": "^9.0.1"
   },
   "peerDependencies": {
     "xstate": "^5.5.1"
